Actualización a Java 21 y mejora en rest